--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Iza Store :)</title> 
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <img src="./assets/logo.png" alt="Logo da minha lojinha">
+        </div>
+
+    </header>
     
 </body>
 </html>
