--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Iza Store :)</title> 
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel="stylesheet" href="./style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,14 +21,17 @@
                 <li> Início </li>
                 <li> Produtos </li>
                 <li> Contato </li>
-                <li> Mais sobre mim </li>
+                <li> Sobre mim </li>
            </ul>  
         </nav>
 
         <div class="end-top">
-            <input type="text" placeholder="Qual produtinho voce quer?" required class="seach"> 
-            <i class="fi fi-rs-user"></i>
-            <i class="fi fi-rs-shopping-cart-add"></i>
+            <div id="search">
+                <input type="text" id="txtBusca" placeholder="Buscar..."/>
+                <i class="fi fi-rs-search"></i>
+              </div>
+                <i class="fi fi-rs-user"></i>
+                <i class="fi fi-rs-shopping-cart-add"></i>
            </div>
     </header>
 
@@ -57,7 +62,7 @@
         </div>
 
         <div class="menu-visual">
-            <div 
+             
         </div>
 
     </main>
