temos janela de produtos?

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li> INICIO </li>
                 </a>
                 <a 
-                    href="https://alelomeu.github.io/Izastore//Produtos">
+                    href="./produtos/produtos.html">
                     <li> PRODUTOS </li>
                 </a>
                 <a
@@ -213,5 +213,7 @@
          
 
     </footer>
+
+    <script src="./produtos/creat-produtos.js"></script>
 </body>
 </html>
