--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
         </div>
 
         <nav>
-            <ul>
+            <ul class="principal-menu">
                 <li>
-                    <a
-                        href="https://alelomeu.github.io/Izastore/">
-                        <p> INICIO </p>
-                    </a>
+                    <a href="https://alelomeu.github.io/Izastore/"> INICIO</a>
                 </li>
+                    <li>
+                        <a  href="./produtos/produtos.html"> PRODUTOS </a>
+                            <ul  class="menu-secundario">
+                                <li> 
+                                    <a href="./produtos/bordados.html"> BORDADOS </a>
+                                </li>
+                                <li> 
+                                    <a href="./produtos/chaveiros.html"> CHAVEIROS </a>
+                                </li>
+                                <li> 
+                                    <a href="./produtos/ecobag.html"> ECOBAG </a>
+                                </li>
+                            </ul>
+                    </li>
                 <li>
-                    <a 
-                        href="./produtos/produtos.html">
-                        <p> PRODUTOS </p>
-                    </a>
-                </li>
-                <li>
-                    <a
-                        href="https://alelomeu.github.io/Izastore//Contato">
-                        <P> CONTATO </P>
-                    </a>
+                    <a href="https://alelomeu.github.io/Izastore//Contato"> CONTATO </a>
                 </li>
            </ul>  
         </nav>
