--- a/produtos/ecobag.html
+++ b/produtos/ecobag.html
@@ -67,7 +67,7 @@
         
         <main>
            
-                <section class="container">
+                <section class="container ecobag">
                     <ul class="lista-de-produtos">
 
                     </ul>
